# ultimate-brain-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  manifest  pyproject.toml  setup_client.py  setup_dev.py
.beads/: config.yaml  metadata.json
.claude/skills/ub/: SKILL.md  skill.md
.claude/skills/ub/references/: daily-review.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
Plans/: async-stirring-sparkle.md
ai_docs/: Custom_MCP_Servers.md
scripts/: release.sh
src/ultimate_brain_mcp/: __init__.py  auth.py  config.py  formatters.py  notion_client.py  server.py  setup_client.py
tests/: conftest.py  test_auth.py  test_block_builders.py  test_block_chunking.py  test_config_unit.py  test_content.py  test_format_task_lookups.py  test_formatters.py  test_large_documents.py  test_markdown_fallback.py  test_note_types.py  test_notion_client_markdown.py  test_oauth_provider.py  test_remote.py  test_server_factory.py  test_tools.py
