[project]
name = "ultimate-brain-mcp"
version = "0.4.0"
description = "MCP server for Thomas Frank's Ultimate Brain Notion system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "notion", "ultimate-brain", "productivity", "para"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.26,<2",
    "httpx>=0.28",
    "pydantic>=2.12",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
remote = ["pyjwt[crypto]>=2.8"]

[project.scripts]
ultimate-brain-mcp = "ultimate_brain_mcp:main"
ultimate-brain-setup = "ultimate_brain_mcp.setup_client:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "python-dotenv>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
